--- a/style.css
+++ b/style.css
@@ -73,6 +73,15 @@ body {
     text-align: center;
 }
 
+.subsection {
+    padding: 40px 40px;
+    text-align: center;
+}
+.subsection h1{
+    font-size: 6rem;
+    color: #2E2C23;
+}
+
 .products {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -96,6 +105,7 @@ body {
     margin: 15px 0 15px;
 }
 
+
 /* FORM */
 form {
     max-width: 500px;
@@ -117,4 +127,5 @@ footer {
     padding: 20px;
     margin-top: 40px;
 }
+
 
