--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
 .hero p {
     margin: 20px 0;
     font-size: 1.2rem;
+    margin-bottom: 1em; 
 }
 
 .btn {
@@ -127,6 +128,7 @@ footer {
     padding: 20px;
     margin-top: 40px;
 }
+
 
 
 
